// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserGroupsTab should match a snapshot where there is data 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="el-flex-justify-between"
      >
        <mock-styled.h1
          classname=""
        >
          SOME_NAME
           User Groups
        </mock-styled.h1>
      </mock-styled.div>
      <mock-styled.div
        classname="el-fade-in el-mb11"
        data-has-call-to-action="false"
        data-has-expandable-action="true"
        data-num-columns-excl-action-col="3"
      >
        <mock-styled.div>
          <mock-styled.div>
            Group Name
          </mock-styled.div>
          <mock-styled.div>
            Description
          </mock-styled.div>
          <mock-styled.div>
            Member Count
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.span
              classname="el-intent-default el-icon-new"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.21 7.21 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.47 7.47 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.48 6.48 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.209 7.209 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27l-2.06-1.85ZM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6Z"
                  fill="currentColor"
                />
              </svg>
            </mock-styled.span>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
            >
              <mock-styled.div
                data-narrow-label="Group Name"
              >
                MarketplaceAdmin
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
            >
              <mock-styled.div
                data-narrow-label="Description"
              >
                Users who can administer the Reapit Marketplace for an organisation or organisation office group
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
            >
              <mock-styled.div
                data-narrow-label="Member Count"
              >
                4
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.span
                classname="el-intent-default el-icon-new"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0ZM12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4ZM19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"
                    fill="currentColor"
                  />
                </svg>
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <form
                class="el-p8"
              >
                <mock-styled.h2
                  classname=""
                >
                  Edit User Group
                </mock-styled.h2>
                <mock-styled.p
                  classname="el-has-grey-text el-has-section-margin"
                >
                  The list below contains all available member groups for your organisation. You can manage users associated to each group by selecting them from the list below.
                </mock-styled.p>
                <mock-styled.div
                  classname="el-form-layout-has-margin el-fade-in"
                >
                  <mock-styled.div>
                    <mock-styled.div
                      classname="el-mb3"
                    >
                      <mock-styled.input
                        classname=""
                        id="test-static-id"
                        placeholder="Search"
                      />
                      <mock-styled.span
                        classname=""
                        style="font-size: 1rem;"
                      >
                        <svg
                          fill="none"
                          height="1em"
                          style="font-size: 1rem;"
                          viewBox="0 0 20 20"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m19.756 18.578-5.688-5.687a7.878 7.878 0 0 0 1.765-4.973C15.833 3.553 12.281 0 7.917 0 3.552.001 0 3.553 0 7.918s3.552 7.916 7.917 7.916a7.879 7.879 0 0 0 4.973-1.765l5.687 5.688a.831.831 0 0 0 1.179 0 .832.832 0 0 0 0-1.179Zm-11.84-4.41a6.256 6.256 0 0 1-6.25-6.25 6.256 6.256 0 0 1 6.25-6.25 6.256 6.256 0 0 1 6.25 6.25 6.256 6.256 0 0 1-6.25 6.25Z"
                            fill="currentColor"
                          />
                        </svg>
                      </mock-styled.span>
                      <mock-styled.label
                        htmlfor="test-static-id"
                      >
                        Users
                      </mock-styled.label>
                    </mock-styled.div>
                    <mock-styled.div>
                      <mock-styled.input
                        id="user-groups-ids-MarketplaceAdmin"
                        name="userIds"
                      />
                      <mock-styled.div
                        classname=""
                      >
                        <mock-styled.input
                          id="test-static-id"
                          type="checkbox"
                        />
                        <mock-styled.label
                          classname=""
                          htmlfor="test-static-id"
                        />
                        <mock-styled.input
                          id="test-static-id"
                          type="checkbox"
                        />
                        <mock-styled.label
                          classname=""
                          htmlfor="test-static-id"
                        />
                        <mock-styled.input
                          id="test-static-id"
                          type="checkbox"
                        />
                        <mock-styled.label
                          classname=""
                          htmlfor="test-static-id"
                        />
                      </mock-styled.div>
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div
                    classname="el-button-group-align-right"
                  >
                    <mock-styled.button
                      classname="el-intent-neutral"
                      type="button"
                    >
                      <mock-styled.div />
                      Cancel
                    </mock-styled.button>
                    <mock-styled.button
                      classname="el-intent-primary"
                      type="submit"
                    >
                      <mock-styled.div />
                      Submit
                    </mock-styled.button>
                  </mock-styled.div>
                </mock-styled.div>
              </form>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
            >
              <mock-styled.div
                data-narrow-label="Group Name"
              >
                OrganisationAdmin
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
            >
              <mock-styled.div
                data-narrow-label="Description"
              >
                Users who can administer an organisation
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
            >
              <mock-styled.div
                data-narrow-label="Member Count"
              >
                1
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.span
                classname="el-intent-default el-icon-new"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0ZM12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4ZM19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"
                    fill="currentColor"
                  />
                </svg>
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <form
                class="el-p8"
              >
                <mock-styled.h2
                  classname=""
                >
                  Edit User Group
                </mock-styled.h2>
                <mock-styled.p
                  classname="el-has-grey-text el-has-section-margin"
                >
                  The list below contains all available member groups for your organisation. You can manage users associated to each group by selecting them from the list below.
                </mock-styled.p>
                <mock-styled.div
                  classname="el-form-layout-has-margin el-fade-in"
                >
                  <mock-styled.div>
                    <mock-styled.div
                      classname="el-mb3"
                    >
                      <mock-styled.input
                        classname=""
                        id="test-static-id"
                        placeholder="Search"
                      />
                      <mock-styled.span
                        classname=""
                        style="font-size: 1rem;"
                      >
                        <svg
                          fill="none"
                          height="1em"
                          style="font-size: 1rem;"
                          viewBox="0 0 20 20"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m19.756 18.578-5.688-5.687a7.878 7.878 0 0 0 1.765-4.973C15.833 3.553 12.281 0 7.917 0 3.552.001 0 3.553 0 7.918s3.552 7.916 7.917 7.916a7.879 7.879 0 0 0 4.973-1.765l5.687 5.688a.831.831 0 0 0 1.179 0 .832.832 0 0 0 0-1.179Zm-11.84-4.41a6.256 6.256 0 0 1-6.25-6.25 6.256 6.256 0 0 1 6.25-6.25 6.256 6.256 0 0 1 6.25 6.25 6.256 6.256 0 0 1-6.25 6.25Z"
                            fill="currentColor"
                          />
                        </svg>
                      </mock-styled.span>
                      <mock-styled.label
                        htmlfor="test-static-id"
                      >
                        Users
                      </mock-styled.label>
                    </mock-styled.div>
                    <mock-styled.div>
                      <mock-styled.input
                        id="user-groups-ids-OrganisationAdmin"
                        name="userIds"
                      />
                      <mock-styled.div
                        classname=""
                      >
                        <mock-styled.input
                          id="test-static-id"
                          type="checkbox"
                        />
                        <mock-styled.label
                          classname=""
                          htmlfor="test-static-id"
                        />
                        <mock-styled.input
                          id="test-static-id"
                          type="checkbox"
                        />
                        <mock-styled.label
                          classname=""
                          htmlfor="test-static-id"
                        />
                        <mock-styled.input
                          id="test-static-id"
                          type="checkbox"
                        />
                        <mock-styled.label
                          classname=""
                          htmlfor="test-static-id"
                        />
                      </mock-styled.div>
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div
                    classname="el-button-group-align-right"
                  >
                    <mock-styled.button
                      classname="el-intent-neutral"
                      type="button"
                    >
                      <mock-styled.div />
                      Cancel
                    </mock-styled.button>
                    <mock-styled.button
                      classname="el-intent-primary"
                      type="submit"
                    >
                      <mock-styled.div />
                      Submit
                    </mock-styled.button>
                  </mock-styled.div>
                </mock-styled.div>
              </form>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
            >
              <mock-styled.div
                data-narrow-label="Group Name"
              >
                ReapitUserAdmin
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
            >
              <mock-styled.div
                data-narrow-label="Description"
              >
                Users who are Reapit customers who can perform admin Foundations actions
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
            >
              <mock-styled.div
                data-narrow-label="Member Count"
              >
                3
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.span
                classname="el-intent-default el-icon-new"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0ZM12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4ZM19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"
                    fill="currentColor"
                  />
                </svg>
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <form
                class="el-p8"
              >
                <mock-styled.h2
                  classname=""
                >
                  Edit User Group
                </mock-styled.h2>
                <mock-styled.p
                  classname="el-has-grey-text el-has-section-margin"
                >
                  The list below contains all available member groups for your organisation. You can manage users associated to each group by selecting them from the list below.
                </mock-styled.p>
                <mock-styled.div
                  classname="el-form-layout-has-margin el-fade-in"
                >
                  <mock-styled.div>
                    <mock-styled.div
                      classname="el-mb3"
                    >
                      <mock-styled.input
                        classname=""
                        id="test-static-id"
                        placeholder="Search"
                      />
                      <mock-styled.span
                        classname=""
                        style="font-size: 1rem;"
                      >
                        <svg
                          fill="none"
                          height="1em"
                          style="font-size: 1rem;"
                          viewBox="0 0 20 20"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m19.756 18.578-5.688-5.687a7.878 7.878 0 0 0 1.765-4.973C15.833 3.553 12.281 0 7.917 0 3.552.001 0 3.553 0 7.918s3.552 7.916 7.917 7.916a7.879 7.879 0 0 0 4.973-1.765l5.687 5.688a.831.831 0 0 0 1.179 0 .832.832 0 0 0 0-1.179Zm-11.84-4.41a6.256 6.256 0 0 1-6.25-6.25 6.256 6.256 0 0 1 6.25-6.25 6.256 6.256 0 0 1 6.25 6.25 6.256 6.256 0 0 1-6.25 6.25Z"
                            fill="currentColor"
                          />
                        </svg>
                      </mock-styled.span>
                      <mock-styled.label
                        htmlfor="test-static-id"
                      >
                        Users
                      </mock-styled.label>
                    </mock-styled.div>
                    <mock-styled.div>
                      <mock-styled.input
                        id="user-groups-ids-ReapitUserAdmin"
                        name="userIds"
                      />
                      <mock-styled.div
                        classname=""
                      >
                        <mock-styled.input
                          id="test-static-id"
                          type="checkbox"
                        />
                        <mock-styled.label
                          classname=""
                          htmlfor="test-static-id"
                        />
                        <mock-styled.input
                          id="test-static-id"
                          type="checkbox"
                        />
                        <mock-styled.label
                          classname=""
                          htmlfor="test-static-id"
                        />
                        <mock-styled.input
                          id="test-static-id"
                          type="checkbox"
                        />
                        <mock-styled.label
                          classname=""
                          htmlfor="test-static-id"
                        />
                      </mock-styled.div>
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div
                    classname="el-button-group-align-right"
                  >
                    <mock-styled.button
                      classname="el-intent-neutral"
                      type="button"
                    >
                      <mock-styled.div />
                      Cancel
                    </mock-styled.button>
                    <mock-styled.button
                      classname="el-intent-primary"
                      type="submit"
                    >
                      <mock-styled.div />
                      Submit
                    </mock-styled.button>
                  </mock-styled.div>
                </mock-styled.div>
              </form>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.button
          data-testid="back-button"
          type="button"
        >
          <mock-styled.span
            classname="el-icon-new"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.495 20.004a.998.998 0 0 1-.709-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71Z"
                fill="currentColor"
              />
            </svg>
          </mock-styled.span>
        </mock-styled.button>
        <mock-styled.div>
          <mock-styled.input
            value="1"
          />
           of 
          1
        </mock-styled.div>
        <mock-styled.button
          data-testid="forward-button"
          type="button"
        >
          <mock-styled.span
            classname="el-icon-new"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.505 20.004a.998.998 0 0 1-1.005-1 1 1 0 0 1 .295-.71l6.292-6.29-6.292-6.29a1.005 1.005 0 0 1 0-1.42 1.002 1.002 0 0 1 1.419 0l6.99 7a1 1 0 0 1 0 1.42l-6.99 7a.998.998 0 0 1-.71.29Z"
                fill="currentColor"
              />
            </svg>
          </mock-styled.span>
        </mock-styled.button>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="el-flex-justify-between"
    >
      <mock-styled.h1
        classname=""
      >
        SOME_NAME
         User Groups
      </mock-styled.h1>
    </mock-styled.div>
    <mock-styled.div
      classname="el-fade-in el-mb11"
      data-has-call-to-action="false"
      data-has-expandable-action="true"
      data-num-columns-excl-action-col="3"
    >
      <mock-styled.div>
        <mock-styled.div>
          Group Name
        </mock-styled.div>
        <mock-styled.div>
          Description
        </mock-styled.div>
        <mock-styled.div>
          Member Count
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.span
            classname="el-intent-default el-icon-new"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.21 7.21 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.47 7.47 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.48 6.48 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.209 7.209 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27l-2.06-1.85ZM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6Z"
                fill="currentColor"
              />
            </svg>
          </mock-styled.span>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
          >
            <mock-styled.div
              data-narrow-label="Group Name"
            >
              MarketplaceAdmin
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
          >
            <mock-styled.div
              data-narrow-label="Description"
            >
              Users who can administer the Reapit Marketplace for an organisation or organisation office group
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
          >
            <mock-styled.div
              data-narrow-label="Member Count"
            >
              4
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.span
              classname="el-intent-default el-icon-new"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0ZM12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4ZM19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"
                  fill="currentColor"
                />
              </svg>
            </mock-styled.span>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <form
              class="el-p8"
            >
              <mock-styled.h2
                classname=""
              >
                Edit User Group
              </mock-styled.h2>
              <mock-styled.p
                classname="el-has-grey-text el-has-section-margin"
              >
                The list below contains all available member groups for your organisation. You can manage users associated to each group by selecting them from the list below.
              </mock-styled.p>
              <mock-styled.div
                classname="el-form-layout-has-margin el-fade-in"
              >
                <mock-styled.div>
                  <mock-styled.div
                    classname="el-mb3"
                  >
                    <mock-styled.input
                      classname=""
                      id="test-static-id"
                      placeholder="Search"
                    />
                    <mock-styled.span
                      classname=""
                      style="font-size: 1rem;"
                    >
                      <svg
                        fill="none"
                        height="1em"
                        style="font-size: 1rem;"
                        viewBox="0 0 20 20"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m19.756 18.578-5.688-5.687a7.878 7.878 0 0 0 1.765-4.973C15.833 3.553 12.281 0 7.917 0 3.552.001 0 3.553 0 7.918s3.552 7.916 7.917 7.916a7.879 7.879 0 0 0 4.973-1.765l5.687 5.688a.831.831 0 0 0 1.179 0 .832.832 0 0 0 0-1.179Zm-11.84-4.41a6.256 6.256 0 0 1-6.25-6.25 6.256 6.256 0 0 1 6.25-6.25 6.256 6.256 0 0 1 6.25 6.25 6.256 6.256 0 0 1-6.25 6.25Z"
                          fill="currentColor"
                        />
                      </svg>
                    </mock-styled.span>
                    <mock-styled.label
                      htmlfor="test-static-id"
                    >
                      Users
                    </mock-styled.label>
                  </mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.input
                      id="user-groups-ids-MarketplaceAdmin"
                      name="userIds"
                    />
                    <mock-styled.div
                      classname=""
                    >
                      <mock-styled.input
                        id="test-static-id"
                        type="checkbox"
                      />
                      <mock-styled.label
                        classname=""
                        htmlfor="test-static-id"
                      />
                      <mock-styled.input
                        id="test-static-id"
                        type="checkbox"
                      />
                      <mock-styled.label
                        classname=""
                        htmlfor="test-static-id"
                      />
                      <mock-styled.input
                        id="test-static-id"
                        type="checkbox"
                      />
                      <mock-styled.label
                        classname=""
                        htmlfor="test-static-id"
                      />
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div
                  classname="el-button-group-align-right"
                >
                  <mock-styled.button
                    classname="el-intent-neutral"
                    type="button"
                  >
                    <mock-styled.div />
                    Cancel
                  </mock-styled.button>
                  <mock-styled.button
                    classname="el-intent-primary"
                    type="submit"
                  >
                    <mock-styled.div />
                    Submit
                  </mock-styled.button>
                </mock-styled.div>
              </mock-styled.div>
            </form>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
          >
            <mock-styled.div
              data-narrow-label="Group Name"
            >
              OrganisationAdmin
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
          >
            <mock-styled.div
              data-narrow-label="Description"
            >
              Users who can administer an organisation
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
          >
            <mock-styled.div
              data-narrow-label="Member Count"
            >
              1
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.span
              classname="el-intent-default el-icon-new"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0ZM12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4ZM19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"
                  fill="currentColor"
                />
              </svg>
            </mock-styled.span>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <form
              class="el-p8"
            >
              <mock-styled.h2
                classname=""
              >
                Edit User Group
              </mock-styled.h2>
              <mock-styled.p
                classname="el-has-grey-text el-has-section-margin"
              >
                The list below contains all available member groups for your organisation. You can manage users associated to each group by selecting them from the list below.
              </mock-styled.p>
              <mock-styled.div
                classname="el-form-layout-has-margin el-fade-in"
              >
                <mock-styled.div>
                  <mock-styled.div
                    classname="el-mb3"
                  >
                    <mock-styled.input
                      classname=""
                      id="test-static-id"
                      placeholder="Search"
                    />
                    <mock-styled.span
                      classname=""
                      style="font-size: 1rem;"
                    >
                      <svg
                        fill="none"
                        height="1em"
                        style="font-size: 1rem;"
                        viewBox="0 0 20 20"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m19.756 18.578-5.688-5.687a7.878 7.878 0 0 0 1.765-4.973C15.833 3.553 12.281 0 7.917 0 3.552.001 0 3.553 0 7.918s3.552 7.916 7.917 7.916a7.879 7.879 0 0 0 4.973-1.765l5.687 5.688a.831.831 0 0 0 1.179 0 .832.832 0 0 0 0-1.179Zm-11.84-4.41a6.256 6.256 0 0 1-6.25-6.25 6.256 6.256 0 0 1 6.25-6.25 6.256 6.256 0 0 1 6.25 6.25 6.256 6.256 0 0 1-6.25 6.25Z"
                          fill="currentColor"
                        />
                      </svg>
                    </mock-styled.span>
                    <mock-styled.label
                      htmlfor="test-static-id"
                    >
                      Users
                    </mock-styled.label>
                  </mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.input
                      id="user-groups-ids-OrganisationAdmin"
                      name="userIds"
                    />
                    <mock-styled.div
                      classname=""
                    >
                      <mock-styled.input
                        id="test-static-id"
                        type="checkbox"
                      />
                      <mock-styled.label
                        classname=""
                        htmlfor="test-static-id"
                      />
                      <mock-styled.input
                        id="test-static-id"
                        type="checkbox"
                      />
                      <mock-styled.label
                        classname=""
                        htmlfor="test-static-id"
                      />
                      <mock-styled.input
                        id="test-static-id"
                        type="checkbox"
                      />
                      <mock-styled.label
                        classname=""
                        htmlfor="test-static-id"
                      />
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div
                  classname="el-button-group-align-right"
                >
                  <mock-styled.button
                    classname="el-intent-neutral"
                    type="button"
                  >
                    <mock-styled.div />
                    Cancel
                  </mock-styled.button>
                  <mock-styled.button
                    classname="el-intent-primary"
                    type="submit"
                  >
                    <mock-styled.div />
                    Submit
                  </mock-styled.button>
                </mock-styled.div>
              </mock-styled.div>
            </form>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
          >
            <mock-styled.div
              data-narrow-label="Group Name"
            >
              ReapitUserAdmin
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
          >
            <mock-styled.div
              data-narrow-label="Description"
            >
              Users who are Reapit customers who can perform admin Foundations actions
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
          >
            <mock-styled.div
              data-narrow-label="Member Count"
            >
              3
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.span
              classname="el-intent-default el-icon-new"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0ZM12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4ZM19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"
                  fill="currentColor"
                />
              </svg>
            </mock-styled.span>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <form
              class="el-p8"
            >
              <mock-styled.h2
                classname=""
              >
                Edit User Group
              </mock-styled.h2>
              <mock-styled.p
                classname="el-has-grey-text el-has-section-margin"
              >
                The list below contains all available member groups for your organisation. You can manage users associated to each group by selecting them from the list below.
              </mock-styled.p>
              <mock-styled.div
                classname="el-form-layout-has-margin el-fade-in"
              >
                <mock-styled.div>
                  <mock-styled.div
                    classname="el-mb3"
                  >
                    <mock-styled.input
                      classname=""
                      id="test-static-id"
                      placeholder="Search"
                    />
                    <mock-styled.span
                      classname=""
                      style="font-size: 1rem;"
                    >
                      <svg
                        fill="none"
                        height="1em"
                        style="font-size: 1rem;"
                        viewBox="0 0 20 20"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m19.756 18.578-5.688-5.687a7.878 7.878 0 0 0 1.765-4.973C15.833 3.553 12.281 0 7.917 0 3.552.001 0 3.553 0 7.918s3.552 7.916 7.917 7.916a7.879 7.879 0 0 0 4.973-1.765l5.687 5.688a.831.831 0 0 0 1.179 0 .832.832 0 0 0 0-1.179Zm-11.84-4.41a6.256 6.256 0 0 1-6.25-6.25 6.256 6.256 0 0 1 6.25-6.25 6.256 6.256 0 0 1 6.25 6.25 6.256 6.256 0 0 1-6.25 6.25Z"
                          fill="currentColor"
                        />
                      </svg>
                    </mock-styled.span>
                    <mock-styled.label
                      htmlfor="test-static-id"
                    >
                      Users
                    </mock-styled.label>
                  </mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.input
                      id="user-groups-ids-ReapitUserAdmin"
                      name="userIds"
                    />
                    <mock-styled.div
                      classname=""
                    >
                      <mock-styled.input
                        id="test-static-id"
                        type="checkbox"
                      />
                      <mock-styled.label
                        classname=""
                        htmlfor="test-static-id"
                      />
                      <mock-styled.input
                        id="test-static-id"
                        type="checkbox"
                      />
                      <mock-styled.label
                        classname=""
                        htmlfor="test-static-id"
                      />
                      <mock-styled.input
                        id="test-static-id"
                        type="checkbox"
                      />
                      <mock-styled.label
                        classname=""
                        htmlfor="test-static-id"
                      />
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div
                  classname="el-button-group-align-right"
                >
                  <mock-styled.button
                    classname="el-intent-neutral"
                    type="button"
                  >
                    <mock-styled.div />
                    Cancel
                  </mock-styled.button>
                  <mock-styled.button
                    classname="el-intent-primary"
                    type="submit"
                  >
                    <mock-styled.div />
                    Submit
                  </mock-styled.button>
                </mock-styled.div>
              </mock-styled.div>
            </form>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.div>
      <mock-styled.button
        data-testid="back-button"
        type="button"
      >
        <mock-styled.span
          classname="el-icon-new"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.495 20.004a.998.998 0 0 1-.709-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71Z"
              fill="currentColor"
            />
          </svg>
        </mock-styled.span>
      </mock-styled.button>
      <mock-styled.div>
        <mock-styled.input
          value="1"
        />
         of 
        1
      </mock-styled.div>
      <mock-styled.button
        data-testid="forward-button"
        type="button"
      >
        <mock-styled.span
          classname="el-icon-new"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.505 20.004a.998.998 0 0 1-1.005-1 1 1 0 0 1 .295-.71l6.292-6.29-6.292-6.29a1.005 1.005 0 0 1 0-1.42 1.002 1.002 0 0 1 1.419 0l6.99 7a1 1 0 0 1 0 1.42l-6.99 7a.998.998 0 0 1-.71.29Z"
              fill="currentColor"
            />
          </svg>
        </mock-styled.span>
      </mock-styled.button>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`UserGroupsTab should match a snapshot where there is data but no user groups 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="el-flex-justify-between"
      >
        <mock-styled.h1
          classname=""
        >
          SOME_NAME
           User Groups
        </mock-styled.h1>
      </mock-styled.div>
      <mock-styled.div
        classname="el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <mock-styled.span
            classname="el-icon-new"
            style="font-size: 1.25rem;"
          >
            <svg
              fill="none"
              height="1em"
              style="font-size: 1.25rem;"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2Zm1.143 15.714h-2.286v-6h2.286v6Zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428Z"
                fill="currentColor"
              />
            </svg>
          </mock-styled.span>
        </div>
        <div
          class="el-pn-content"
        >
          No users found
        </div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="el-flex-justify-between"
    >
      <mock-styled.h1
        classname=""
      >
        SOME_NAME
         User Groups
      </mock-styled.h1>
    </mock-styled.div>
    <mock-styled.div
      classname="el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline"
    >
      <div
        class="el-pn-icon"
        data-testid="close-icon"
      >
        <mock-styled.span
          classname="el-icon-new"
          style="font-size: 1.25rem;"
        >
          <svg
            fill="none"
            height="1em"
            style="font-size: 1.25rem;"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2Zm1.143 15.714h-2.286v-6h2.286v6Zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428Z"
              fill="currentColor"
            />
          </svg>
        </mock-styled.span>
      </div>
      <div
        class="el-pn-content"
      >
        No users found
      </div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`UserGroupsTab should match a snapshot where there is no orgId 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="el-flex-justify-between"
      >
        <mock-styled.h1
          classname=""
        >
          User Groups
        </mock-styled.h1>
      </mock-styled.div>
      <mock-styled.div
        classname="el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <mock-styled.span
            classname="el-icon-new"
            style="font-size: 1.25rem;"
          >
            <svg
              fill="none"
              height="1em"
              style="font-size: 1.25rem;"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2Zm1.143 15.714h-2.286v-6h2.286v6Zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428Z"
                fill="currentColor"
              />
            </svg>
          </mock-styled.span>
        </div>
        <div
          class="el-pn-content"
        >
          No organisation selected. You need to select an organisation to view user groups.
        </div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="el-flex-justify-between"
    >
      <mock-styled.h1
        classname=""
      >
        User Groups
      </mock-styled.h1>
    </mock-styled.div>
    <mock-styled.div
      classname="el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline"
    >
      <div
        class="el-pn-icon"
        data-testid="close-icon"
      >
        <mock-styled.span
          classname="el-icon-new"
          style="font-size: 1.25rem;"
        >
          <svg
            fill="none"
            height="1em"
            style="font-size: 1.25rem;"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2Zm1.143 15.714h-2.286v-6h2.286v6Zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428Z"
              fill="currentColor"
            />
          </svg>
        </mock-styled.span>
      </div>
      <div
        class="el-pn-content"
      >
        No organisation selected. You need to select an organisation to view user groups.
      </div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
